# c-multiformats

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  run-tests.sh
bindings/: groovy.groovy  lua.lua  lua_cid.lua  python.py  ruby.rb
include/: cid.h  multiaddr.h  multibase.h  multicodec.h  multihash.h  varint.h
src/: cid.c  cli.c  main.c  multiaddr.c  multibase.c  multicodec.c  multihash-gcrypt.c  multihash-mbed.c  multihash-openssl.c  multihash.c  varint.c
test/: cid_tests.c  fuzz.c  main.c  multiaddr_tests.c  multibase_tests.c  multihash_tests.c  test_utils.h  varint_tests.c
